# replicant

./: .bazelrc  .gitattributes  .gitignore  .travis.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Gemfile  MODULE.bazel  README.md  README.rdoc  TODO.md  bazelw  build.yaml  buildfile  project.config
client/: BUILD.bazel
client/src/main/java/replicant/: AbstractChangeSetParser.java  AbstractTransport.java  ApplicationEventBroker.java  ApplicationEventHandler.java  AreaOfInterest.java  AreaOfInterestAction.java  AreaOfInterestEntry.java  AreaOfInterestRequest.java  AreaOfInterestService.java  BUILD.bazel  CacheEntry.java  CacheService.java  ChangeMapper.java  ChangeSet.java  ChangeSetParser.java  Channel.java  ChannelAction.java  ChannelAddress.java  ChannelChange.java  ChannelChangeDescriptor.java  ChannelLinkSchema.java  ChannelSchema.java  ChannelType.java  ClassMetaDataCheck.java  CollectionsUtil.java  Connection.java  Connector.java  ConnectorEntry.java  ConnectorState.java  ConvergeAction.java  Converger.java  DataLoadAction.java  DeferredListenerAction.java  Entity.java  EntityBrokerLock.java  EntityChange.java  EntityChangeBroker.java  EntityChangeData.java  EntityChangeDataImpl.java  EntityChangeEmitter.java  (+65 more)
client/src/main/java/replicant/events/: MessageProcessedEvent.java  SubscribeCompletedEvent.java  SubscribeStartedEvent.java  SubscriptionUpdateCompletedEvent.java  SubscriptionUpdateStartedEvent.java  package-info.java
client/src/main/java/replicant/messages/: AbstractMessage.java  AuthTokenMessage.java  BulkSubscribeMessage.java  BulkUnsubscribeMessage.java  ChangeSet.java  ChangeSetMessage.java  ChannelChange.java  ClientToServerMessage.java  EntityChange.java  EntityChangeData.java  EntityChangeDataImpl.java  EntityChannel.java  ErrorMessage.java  EtagsData.java  EtagsMessage.java  ExecMessage.java  GwtIncompatible.java  OkMessage.java  PingMessage.java  ServerToClientMessage.java  SessionCreatedMessage.java  SubscribeMessage.java  SuppressFBWarnings.java  UnsubscribeMessage.java  UpdateMessage.java  UseCacheMessage.java  package-info.java
client/src/main/java/replicant/react4j/: React4j.gwt.xml  ReplicantSubscription.java  package-info.java
client/src/main/java/replicant/spi/: CacheEntry.java  CacheService.java  WebStorageCacheService.java
client/src/main/java/replicant/spy/: AreaOfInterestCreatedEvent.java  AreaOfInterestDisposedEvent.java  AreaOfInterestFilterUpdatedEvent.java  AreaOfInterestStatusUpdatedEvent.java  AreaOfInterestUpdatedEvent.java  ConnectFailureEvent.java  ConnectedEvent.java  DataLoadStatus.java  DataLoaderConnectEvent.java  DataLoaderConnectFailureEvent.java  DataLoaderConnectedEvent.java  DataLoaderDisconnectEvent.java  DataLoaderDisconnectFailureEvent.java  DataLoaderDisconnectedEvent.java  DataLoaderInvalidConnectEvent.java  DataLoaderInvalidDisconnectEvent.java  DataLoaderMessageProcessEvent.java  DataLoaderMessageProcessFailureEvent.java  DataLoaderMessageProcessedEvent.java  DataLoaderMessageReadFailureEvent.java  DisconnectFailureEvent.java  DisconnectedEvent.java  ExecCompletedEvent.java  ExecRequestQueuedEvent.java  ExecStartedEvent.java  InSyncEvent.java  MessageProcessFailureEvent.java  MessageProcessedEvent.java  MessageReadFailureEvent.java  OutOfSyncEvent.java  RequestCompletedEvent.java  RequestStartedEvent.java  RestartEvent.java  SerializableEvent.java  SubscribeCompletedEvent.java  SubscribeFailedEvent.java  SubscribeRequestCreatedEvent.java  SubscribeRequestQueuedEvent.java  SubscribeStartedEvent.java  SubscriptionCreatedEvent.java  (+15 more)
client/src/test/gwt/: BUILD.bazel
client/src/test/j2cl/: BUILD.bazel  entry_point.js
client/src/test/java/replicant/: AbstractReplicantTest.java  ApplicationEventBrokerTest.java  AreaOfInterestEntryTest.java  AreaOfInterestRequestTest.java  AreaOfInterestServiceTest.java  AreaOfInterestTest.java  BUILD.bazel  CacheEntryTest.java  ChangeSetTest.java  ChannelActionTest.java  ChannelAddressTest.java  ChannelChangeDescriptorTest.java  ChannelChangeTest.java  ChannelSchemaTest.java  ChannelTest.java  ChannelTypeTest.java  ConnectionTest.java  ConnectorEntryTest.java  ConnectorStateTest.java  ConnectorTest.java  ConvergerTest.java  DataLoadActionTest.java  DiagnosticMessagesSuite.java  EntityChangeBrokerTest.java  EntityChangeTest.java  EntityChannelTest.java  EntitySchemaTest.java  EntityServiceTest.java  EntityTest.java  EntityTypeTest.java  ListenerEntryTest.java  MessageCollector.java  MessageResponseTest.java  RateLimitedValueTest.java  RecordingListener.java  ReplicantContextTest.java  ReplicantLoggerTest.java  ReplicantRuntimeTest.java  ReplicantServiceTest.java  ReplicantTest.java  (+23 more)
client/src/test/java/replicant/events/: MessageProcessedEventTest.java  SubscribeCompletedEventTest.java  SubscribeStartedEventTest.java  SubscriptionUpdateCompletedEventTest.java  SubscriptionUpdateStartedEventTest.java
client/src/test/java/replicant/gwt/: BUILD.bazel  React4jSmoke.gwt.xml  ReplicantDebugSmoke.gwt.xml  ReplicantDevSmoke.gwt.xml  ReplicantSmoke.gwt.xml  SmokeEntryPoint.java  package-info.java
client/src/test/java/replicant/messages/: BUILD.bazel  ChangeSetMessageTest.java  ChangeSetTest.java  EntityChangeDataImpl.java  EntityChangeTest.java  EntityChannelTest.java  UpdateMessageTest.java  package-info.java
client/src/test/java/replicant/spi/: CacheEntryTest.java  WebStorageCacheServiceTest.java
client/src/test/java/replicant/spy/: AreaOfInterestCreatedEventTest.java  AreaOfInterestDisposedEventTest.java  AreaOfInterestFilterUpdatedEventTest.java  AreaOfInterestStatusUpdatedEventTest.java  AreaOfInterestUpdatedEventTest.java  BUILD.bazel  ConnectFailureEventTest.java  ConnectedEventTest.java  DataLoadStatusTest.java  DataLoaderConnectEventTest.java  DataLoaderConnectFailureEventTest.java  DataLoaderConnectedEventTest.java  DisconnectedEventTest.java  (+42 more)
server/: BUILD.bazel
shared/: BUILD.bazel
tools/release/: BUILD.bazel  README.md  check_ready.sh  finalize_release.sh  next_version.sh  perform_release.sh  prepare_release.sh  release.bzl  upload_maven_central.sh
(+993 files in other folders)
