load("@buildifier_prebuilt//:rules.bzl", "buildifier")

WARNINGS = [
    "+unsorted-dict-items",
    "-module-docstring",
    "-function-docstring",
    "-external-path",
]

buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    lint_warnings = WARNINGS,
)

buildifier(
    name = "buildifier_check",
    diff_command = "diff -u",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    lint_warnings = WARNINGS,
    mode = "diff",
)
