load("//third_party/java:java_single_jar.bzl", "java_single_jar")
load("//third_party/java:rules.bzl", "java_library", "java_testng")

CLIENT_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=false",
    "-Dreplicant.diagnostic_messages_file=client/src/test/java/replicant/diagnostic_messages.json",
]

CLIENT_DIAGNOSTIC_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=true",
    "-Dreplicant.diagnostic_messages_file=client/src/test/java/replicant/diagnostic_messages.json",
]

CLIENT_TEST_DATA = ["src/test/java/replicant/diagnostic_messages.json"]

java_library(
    name = "client_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    plugins = [
        "//third_party/java:arez_processor_plugin",
        "//third_party/java:grim_processor_plugin",
        "//third_party/java:react4j_processor_plugin",
    ],
    resource_strip_prefix = "client/src/main/java",
    resources = glob([
        "src/main/java/**/*.gwt.xml",
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//shared:shared_lib",
        "//third_party/java:akasha_gwt",
        "//third_party/java:arez_core",
        "//third_party/java:base",
        "//third_party/java:braincheck_core",
        "//third_party/java:grim_annotations",
        "//third_party/java:gwt_user",
        "//third_party/java:javax_annotation",
        "//third_party/java:jsinterop_annotations",
        "//third_party/java:org_jetbrains_annotations",
        "//third_party/java:react4j_core",
        "//third_party/java:zemeckis_core",
    ],
)

java_library(
    name = "client_test_support",
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = [
            "src/test/java/**/*Test.java",
        ],
    ) + ["src/test/java/replicant/AbstractReplicantTest.java"],
    exports = [
        ":client_lib",
        "//shared:shared_lib",
        "//third_party/java:arez_core",
        "//third_party/java:arez_extras_testng",
        "//third_party/java:braincheck_core",
        "//third_party/java:braincheck_testng",
        "//third_party/java:byte_buddy",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:mockito_core",
        "//third_party/java:objenesis",
        "//third_party/java:testng",
    ],
    deps = [
        ":client_lib",
        "//shared:shared_lib",
        "//third_party/java:arez_core",
        "//third_party/java:arez_extras_testng",
        "//third_party/java:braincheck_core",
        "//third_party/java:braincheck_testng",
        "//third_party/java:byte_buddy",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:mockito_core",
        "//third_party/java:objenesis",
        "//third_party/java:testng",
    ],
)

CLIENT_TEST_CLASSES = [
    "replicant.AreaOfInterestRequestTest",
    "replicant.AreaOfInterestServiceTest",
    "replicant.AreaOfInterestTest",
    "replicant.CacheEntryTest",
    "replicant.ChannelAddressTest",
    "replicant.ChannelChangeDescriptorTest",
    "replicant.ChannelChangeTest",
    "replicant.ChannelSchemaTest",
    "replicant.ConnectionTest",
    "replicant.ConnectorEntryTest",
    "replicant.ConnectorStateTest",
    "replicant.ConnectorTest",
    "replicant.ConvergerTest",
    "replicant.EntitySchemaTest",
    "replicant.EntityServiceTest",
    "replicant.EntityTest",
    "replicant.MessageResponseTest",
    "replicant.RateLimitedValueTest",
    "replicant.ReplicantContextTest",
    "replicant.ReplicantLoggerTest",
    "replicant.ReplicantRuntimeTest",
    "replicant.ReplicantServiceTest",
    "replicant.ReplicantTest",
    "replicant.ReplicantUtilTest",
    "replicant.RequestEntryTest",
    "replicant.RequestTest",
    "replicant.SchemaServiceTest",
    "replicant.SpyImplTest",
    "replicant.SubscriptionServiceTest",
    "replicant.SubscriptionTest",
    "replicant.SystemSchemaTest",
    "replicant.TransportContextImplTest",
    "replicant.ValidatorTest",
    "replicant.ZoneTest",
    "replicant.messages.EntityChangeTest",
    "replicant.messages.UpdateMessageTest",
    "replicant.spy.AreaOfInterestCreatedEventTest",
    "replicant.spy.AreaOfInterestDisposedEventTest",
    "replicant.spy.AreaOfInterestFilterUpdatedEventTest",
    "replicant.spy.AreaOfInterestStatusUpdatedEventTest",
    "replicant.spy.ConnectFailureEventTest",
    "replicant.spy.ConnectedEventTest",
    "replicant.spy.DataLoadStatusTest",
    "replicant.spy.DisconnectFailureEventTest",
    "replicant.spy.DisconnectedEventTest",
    "replicant.spy.ExecCompletedEventTest",
    "replicant.spy.ExecRequestQueuedEventTest",
    "replicant.spy.ExecStartedEventTest",
    "replicant.spy.InSyncEventTest",
    "replicant.spy.MessageProcessFailureEventTest",
    "replicant.spy.MessageProcessedEventTest",
    "replicant.spy.MessageReadFailureEventTest",
    "replicant.spy.OutOfSyncEventTest",
    "replicant.spy.RequestCompletedEventTest",
    "replicant.spy.RequestStartedEventTest",
    "replicant.spy.RestartEventTest",
    "replicant.spy.SubscribeCompletedEventTest",
    "replicant.spy.SubscribeRequestQueuedEventTest",
    "replicant.spy.SubscribeStartedEventTest",
    "replicant.spy.SubscriptionCreatedEventTest",
    "replicant.spy.SubscriptionDisposedEventTest",
    "replicant.spy.SubscriptionOrphanedEventTest",
    "replicant.spy.SubscriptionUpdateCompletedEventTest",
    "replicant.spy.SubscriptionUpdateRequestQueuedEventTest",
    "replicant.spy.SubscriptionUpdateStartedEventTest",
    "replicant.spy.SyncRequestEventTest",
    "replicant.spy.UnsubscribeCompletedEventTest",
    "replicant.spy.UnsubscribeRequestQueuedEventTest",
    "replicant.spy.UnsubscribeStartedEventTest",
    "replicant.spy.tools.ReplicantSpyUtilTest",
    "replicant.spy.tools.SpyEventProcessorTest",
]

java_testng(
    name = "client_diagnostic_messages_test",
    srcs = glob(
        ["src/test/java/**/*Test.java"],
        exclude = ["src/test/java/replicant/AbstractReplicantTest.java"],
    ),
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_DIAGNOSTIC_TEST_JVM_FLAGS,
    test_class = ",".join(CLIENT_TEST_CLASSES),
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_request_test",
    srcs = ["src/test/java/replicant/AreaOfInterestRequestTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.AreaOfInterestRequestTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_service_test",
    srcs = ["src/test/java/replicant/AreaOfInterestServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.AreaOfInterestServiceTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_test",
    srcs = ["src/test/java/replicant/AreaOfInterestTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.AreaOfInterestTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "cache_entry_test",
    srcs = ["src/test/java/replicant/CacheEntryTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.CacheEntryTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "channel_address_test",
    srcs = ["src/test/java/replicant/ChannelAddressTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelAddressTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "channel_change_descriptor_test",
    srcs = ["src/test/java/replicant/ChannelChangeDescriptorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelChangeDescriptorTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "channel_change_test",
    srcs = ["src/test/java/replicant/ChannelChangeTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelChangeTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "channel_schema_test",
    srcs = ["src/test/java/replicant/ChannelSchemaTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelSchemaTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "connection_test",
    srcs = ["src/test/java/replicant/ConnectionTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectionTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "connector_entry_test",
    srcs = ["src/test/java/replicant/ConnectorEntryTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectorEntryTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "connector_state_test",
    srcs = ["src/test/java/replicant/ConnectorStateTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectorStateTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "connector_test",
    srcs = ["src/test/java/replicant/ConnectorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectorTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "converger_test",
    srcs = ["src/test/java/replicant/ConvergerTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConvergerTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "entity_schema_test",
    srcs = ["src/test/java/replicant/EntitySchemaTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.EntitySchemaTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "entity_service_test",
    srcs = ["src/test/java/replicant/EntityServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.EntityServiceTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "entity_test",
    srcs = ["src/test/java/replicant/EntityTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.EntityTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "message_response_test",
    srcs = ["src/test/java/replicant/MessageResponseTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.MessageResponseTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "rate_limited_value_test",
    srcs = ["src/test/java/replicant/RateLimitedValueTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.RateLimitedValueTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_context_test",
    srcs = ["src/test/java/replicant/ReplicantContextTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantContextTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_logger_test",
    srcs = ["src/test/java/replicant/ReplicantLoggerTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantLoggerTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_runtime_test",
    srcs = ["src/test/java/replicant/ReplicantRuntimeTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantRuntimeTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_service_test",
    srcs = ["src/test/java/replicant/ReplicantServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantServiceTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_test",
    srcs = ["src/test/java/replicant/ReplicantTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_util_test",
    srcs = ["src/test/java/replicant/ReplicantUtilTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantUtilTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "request_entry_test",
    srcs = ["src/test/java/replicant/RequestEntryTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.RequestEntryTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "request_test",
    srcs = ["src/test/java/replicant/RequestTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.RequestTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "schema_service_test",
    srcs = ["src/test/java/replicant/SchemaServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SchemaServiceTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "spy_impl_test",
    srcs = ["src/test/java/replicant/SpyImplTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SpyImplTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_service_test",
    srcs = ["src/test/java/replicant/SubscriptionServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SubscriptionServiceTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_test",
    srcs = ["src/test/java/replicant/SubscriptionTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SubscriptionTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "system_schema_test",
    srcs = ["src/test/java/replicant/SystemSchemaTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SystemSchemaTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "transport_context_impl_test",
    srcs = ["src/test/java/replicant/TransportContextImplTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.TransportContextImplTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "validator_test",
    srcs = ["src/test/java/replicant/ValidatorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ValidatorTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "zone_test",
    srcs = ["src/test/java/replicant/ZoneTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ZoneTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "entity_change_test",
    srcs = ["src/test/java/replicant/messages/EntityChangeTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.messages.EntityChangeTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "update_message_test",
    srcs = ["src/test/java/replicant/messages/UpdateMessageTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.messages.UpdateMessageTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_created_event_test",
    srcs = ["src/test/java/replicant/spy/AreaOfInterestCreatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestCreatedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_disposed_event_test",
    srcs = ["src/test/java/replicant/spy/AreaOfInterestDisposedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestDisposedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_filter_updated_event_test",
    srcs = ["src/test/java/replicant/spy/AreaOfInterestFilterUpdatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestFilterUpdatedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "area_of_interest_status_updated_event_test",
    srcs = ["src/test/java/replicant/spy/AreaOfInterestStatusUpdatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestStatusUpdatedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "connect_failure_event_test",
    srcs = ["src/test/java/replicant/spy/ConnectFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ConnectFailureEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "connected_event_test",
    srcs = ["src/test/java/replicant/spy/ConnectedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ConnectedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "data_load_status_test",
    srcs = ["src/test/java/replicant/spy/DataLoadStatusTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DataLoadStatusTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "disconnect_failure_event_test",
    srcs = ["src/test/java/replicant/spy/DisconnectFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DisconnectFailureEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "disconnected_event_test",
    srcs = ["src/test/java/replicant/spy/DisconnectedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DisconnectedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "exec_completed_event_test",
    srcs = ["src/test/java/replicant/spy/ExecCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecCompletedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "exec_request_queued_event_test",
    srcs = ["src/test/java/replicant/spy/ExecRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecRequestQueuedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "exec_started_event_test",
    srcs = ["src/test/java/replicant/spy/ExecStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecStartedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "in_sync_event_test",
    srcs = ["src/test/java/replicant/spy/InSyncEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.InSyncEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "message_process_failure_event_test",
    srcs = ["src/test/java/replicant/spy/MessageProcessFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageProcessFailureEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "message_processed_event_test",
    srcs = ["src/test/java/replicant/spy/MessageProcessedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageProcessedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "message_read_failure_event_test",
    srcs = ["src/test/java/replicant/spy/MessageReadFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageReadFailureEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "out_of_sync_event_test",
    srcs = ["src/test/java/replicant/spy/OutOfSyncEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.OutOfSyncEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "request_completed_event_test",
    srcs = ["src/test/java/replicant/spy/RequestCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RequestCompletedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "request_started_event_test",
    srcs = ["src/test/java/replicant/spy/RequestStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RequestStartedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "restart_event_test",
    srcs = ["src/test/java/replicant/spy/RestartEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RestartEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscribe_completed_event_test",
    srcs = ["src/test/java/replicant/spy/SubscribeCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeCompletedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscribe_request_queued_event_test",
    srcs = ["src/test/java/replicant/spy/SubscribeRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeRequestQueuedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscribe_started_event_test",
    srcs = ["src/test/java/replicant/spy/SubscribeStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeStartedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_created_event_test",
    srcs = ["src/test/java/replicant/spy/SubscriptionCreatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionCreatedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_disposed_event_test",
    srcs = ["src/test/java/replicant/spy/SubscriptionDisposedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionDisposedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_orphaned_event_test",
    srcs = ["src/test/java/replicant/spy/SubscriptionOrphanedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionOrphanedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_update_completed_event_test",
    srcs = ["src/test/java/replicant/spy/SubscriptionUpdateCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateCompletedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_update_request_queued_event_test",
    srcs = ["src/test/java/replicant/spy/SubscriptionUpdateRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateRequestQueuedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "subscription_update_started_event_test",
    srcs = ["src/test/java/replicant/spy/SubscriptionUpdateStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateStartedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "sync_request_event_test",
    srcs = ["src/test/java/replicant/spy/SyncRequestEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SyncRequestEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "unsubscribe_completed_event_test",
    srcs = ["src/test/java/replicant/spy/UnsubscribeCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeCompletedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "unsubscribe_request_queued_event_test",
    srcs = ["src/test/java/replicant/spy/UnsubscribeRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeRequestQueuedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "unsubscribe_started_event_test",
    srcs = ["src/test/java/replicant/spy/UnsubscribeStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeStartedEventTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "replicant_spy_util_test",
    srcs = ["src/test/java/replicant/spy/tools/ReplicantSpyUtilTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.tools.ReplicantSpyUtilTest",
    deps = [":client_test_support"],
)

java_testng(
    name = "spy_event_processor_test",
    srcs = ["src/test/java/replicant/spy/tools/SpyEventProcessorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.tools.SpyEventProcessorTest",
    deps = [":client_test_support"],
)

java_single_jar(
    name = "client",
    visibility = ["//visibility:public"],
    deps = [":client_lib"],
)
