load("//third_party/java:java_single_jar.bzl", "java_single_jar")
load("//third_party/java:rules.bzl", "java_server_library", "java_testng")

java_server_library(
    name = "server_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//shared:shared_lib",
        "//third_party/java:javaee_api",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:org_jetbrains_annotations",
    ],
)

java_server_library(
    name = "server_test_support",
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = ["src/test/java/**/*Test.java"],
    ),
    exports = [
        ":server_lib",
        "//shared:shared_lib",
        "//third_party/java:byte_buddy",
        "//third_party/java:javaee_api",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:jndikit",
        "//third_party/java:mockito_core",
        "//third_party/java:objenesis",
        "//third_party/java:org_jetbrains_annotations",
        "//third_party/java:testng",
    ],
    deps = [
        ":server_lib",
        "//shared:shared_lib",
        "//third_party/java:byte_buddy",
        "//third_party/java:javaee_api",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:jndikit",
        "//third_party/java:mockito_core",
        "//third_party/java:objenesis",
        "//third_party/java:org_jetbrains_annotations",
        "//third_party/java:testng",
    ],
)

java_testng(
    name = "change_set_test",
    srcs = ["src/test/java/replicant/server/ChangeSetTest.java"],
    test_class = "replicant.server.ChangeSetTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "change_test",
    srcs = ["src/test/java/replicant/server/ChangeTest.java"],
    test_class = "replicant.server.ChangeTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "channel_address_test",
    srcs = ["src/test/java/replicant/server/ChannelAddressTest.java"],
    test_class = "replicant.server.ChannelAddressTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "channel_link_test",
    srcs = ["src/test/java/replicant/server/ChannelLinkTest.java"],
    test_class = "replicant.server.ChannelLinkTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "entity_message_set_test",
    srcs = ["src/test/java/replicant/server/EntityMessageSetTest.java"],
    test_class = "replicant.server.EntityMessageSetTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "entity_message_sorter_test",
    srcs = ["src/test/java/replicant/server/EntityMessageSorterTest.java"],
    test_class = "replicant.server.EntityMessageSorterTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "entity_message_test",
    srcs = ["src/test/java/replicant/server/EntityMessageTest.java"],
    test_class = "replicant.server.EntityMessageTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "abstract_session_context_impl_test",
    srcs = ["src/test/java/replicant/server/ee/AbstractSessionContextImplTest.java"],
    test_class = "replicant.server.ee.AbstractSessionContextImplTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "entity_message_cache_util_test",
    srcs = ["src/test/java/replicant/server/ee/EntityMessageCacheUtilTest.java"],
    test_class = "replicant.server.ee.EntityMessageCacheUtilTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "replicant_context_holder_test",
    srcs = ["src/test/java/replicant/server/ee/ReplicantContextHolderTest.java"],
    test_class = "replicant.server.ee.ReplicantContextHolderTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "replicant_endpoint_test",
    srcs = ["src/test/java/replicant/server/ee/ReplicantEndpointTest.java"],
    test_class = "replicant.server.ee.ReplicantEndpointTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "replicant_entity_change_listener_test",
    srcs = ["src/test/java/replicant/server/ee/ReplicantEntityChangeListenerTest.java"],
    test_class = "replicant.server.ee.ReplicantEntityChangeListenerTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "json_encoder_test",
    srcs = ["src/test/java/replicant/server/json/JsonEncoderTest.java"],
    test_class = "replicant.server.json.JsonEncoderTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "channel_cache_entry_test",
    srcs = ["src/test/java/replicant/server/transport/ChannelCacheEntryTest.java"],
    test_class = "replicant.server.transport.ChannelCacheEntryTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "channel_meta_data_test",
    srcs = ["src/test/java/replicant/server/transport/ChannelMetaDataTest.java"],
    test_class = "replicant.server.transport.ChannelMetaDataTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "filter_util_test",
    srcs = ["src/test/java/replicant/server/FilterUtilTest.java"],
    test_class = "replicant.server.FilterUtilTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "invariant_util_test",
    srcs = ["src/test/java/replicant/server/transport/InvariantUtilTest.java"],
    test_class = "replicant.server.transport.InvariantUtilTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "packet_test",
    srcs = ["src/test/java/replicant/server/transport/PacketTest.java"],
    test_class = "replicant.server.transport.PacketTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "replicant_message_broker_impl_test",
    srcs = ["src/test/java/replicant/server/transport/ReplicantMessageBrokerImplTest.java"],
    test_class = "replicant.server.transport.ReplicantMessageBrokerImplTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "replicant_session_manager_impl_test",
    srcs = ["src/test/java/replicant/server/transport/ReplicantSessionManagerImplTest.java"],
    test_class = "replicant.server.transport.ReplicantSessionManagerImplTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "replicant_session_test",
    srcs = ["src/test/java/replicant/server/transport/ReplicantSessionTest.java"],
    test_class = "replicant.server.transport.ReplicantSessionTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "schema_meta_data_test",
    srcs = ["src/test/java/replicant/server/transport/SchemaMetaDataTest.java"],
    test_class = "replicant.server.transport.SchemaMetaDataTest",
    deps = [":server_test_support"],
)

java_testng(
    name = "subscription_entry_test",
    srcs = ["src/test/java/replicant/server/transport/SubscriptionEntryTest.java"],
    test_class = "replicant.server.transport.SubscriptionEntryTest",
    deps = [":server_test_support"],
)

java_single_jar(
    name = "server",
    visibility = ["//visibility:public"],
    deps = [":server_lib"],
)
