load("//third_party/java:java_single_jar.bzl", "java_single_jar")
load("//third_party/java:rules.bzl", "java_server_library")

SERVER_TEST_SUPPORT_EXPORTS = [
    ":server_lib",
    "//server/src/test/java/replicant/server:server_test_support_lib",
    "//server/src/test/java/replicant/server/ee:ee_test_support_lib",
    "//shared:shared_lib",
    "//third_party/java:byte_buddy",
    "//third_party/java:jakarta_annotation_api",
    "//third_party/java:jakarta_enterprise_cdi_api",
    "//third_party/java:jakarta_inject",
    "//third_party/java:jakarta_interceptor_api",
    "//third_party/java:jakarta_transaction_api",
    "//third_party/java:jakarta_websocket_api",
    "//third_party/java:javax_enterprise_concurrent_api",
    "//third_party/java:javax_persistence_api",
    "//third_party/java:javax_annotation",
    "//third_party/java:javax_json",
    "//third_party/java:jndikit",
    "//third_party/java:mockito_core",
    "//third_party/java:objenesis",
    "//third_party/java:org_jetbrains_annotations",
    "//third_party/java:testng",
]

java_server_library(
    name = "server_lib",
    visibility = ["//visibility:public"],
    exports = [
        "//server/src/main/java/replicant/server:server_core_lib",
        "//server/src/main/java/replicant/server/ee:ee_lib",
        "//server/src/main/java/replicant/server/json:json_lib",
        "//server/src/main/java/replicant/server/runtime:runtime_lib",
        "//server/src/main/java/replicant/server/transport:transport_lib",
    ],
)

java_server_library(
    name = "server_test_support",
    visibility = [
        "//server/src/test/java/replicant/server:__pkg__",
        "//server/src/test/java/replicant/server:__subpackages__",
    ],
    exports = SERVER_TEST_SUPPORT_EXPORTS,
)

java_single_jar(
    name = "server",
    visibility = ["//visibility:public"],
    deps = [":server_lib"],
)
