load("//third_party/java:rules.bzl", "java_library")

java_library(
    name = "shared_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_strip_prefix = "shared/src/main/java",
    resources = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = ["//third_party/java:javax_annotation"],
)
